<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
            android:id="@+id/port"
            android:key="port"
            android:title="@string/port"
            android:dialogTitle="@string/port"
            android:dialogMessage="@string/port_explanation"
            android:defaultValue="49000"
            android:inputType="number"
            />

    <CheckBoxPreference
            android:id="@+id/enable_udp_forward"
            android:key="enable_udp_forward"
            android:title="@string/forward_udp"
            />

    <EditTextPreference
            android:id="@+id/forward_address"
            android:key="forward_address"
            android:title="@string/forward_address"
            android:dialogTitle="@string/forward_address"
            android:dialogMessage="@string/forward_explanation"
            android:defaultValue=""
            android:inputType="text"
            android:enabled="false"/>

    <CheckBoxPreference
            android:id="@+id/easy_vfr"
            android:key="easy_vfr"
            android:title="@string/easy_vfr"
            />

</PreferenceScreen>