<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:padding="40dp">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mock_location"
            android:textSize="@dimen/font_size"
            />
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ip_text_view"
            android:text="@string/ip_instructions"
            android:textSize="@dimen/font_size"
            />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/active_instructions" android:textSize="@dimen/font_size"
              android:id="@+id/textView2" android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/problem_instructions"
            android:id="@+id/textView" android:textSize="@dimen/font_size" android:autoLink="web"/>
</LinearLayout>
