<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
        >
    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">
        <TableRow>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    android:gravity="left"
                    android:textSize="@dimen/font_size"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/latitude_view"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/font_size"
                    />
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                    android:gravity="left"
                    android:textSize="@dimen/font_size"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/longitude_view"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/font_size"
                    />
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/altitude"
                    android:gravity="left"
                    android:textSize="@dimen/font_size"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/altitude_view"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/font_size"
                    />
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/heading"
                    android:gravity="left"
                    android:textSize="@dimen/font_size"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/heading_view"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/font_size"
                    />
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/groundspeed"
                    android:gravity="left"
                    android:textSize="@dimen/font_size"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/groundspeed_view"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/font_size"
                    />
        </TableRow>
    </TableLayout>
</LinearLayout>
